@@ -23,11 +23,13 @@ ignore "Test2" = ignoreTest
 warn = ignoreTest3
 ignore = Ignore_Test
 
-
 {-# WARNING module_ "HLint: ignore Test4" #-}
 {-# WARNING annTest2 "HLint: error" #-}
 {-# WARNING annTest3 "HLint: warn" #-}
 {-# WARNING Ann_Test "HLint: ignore" #-}
+
+
+error = concat (map f x) ==> Data.List.concatMap f x
 
 
 {-
@@ -57,5 +59,9 @@ annTest2 = foldl -- @Error ???
 annTest3 = scanr -- @Warning ???
 type Ann_Test = Int -- @Ignore ???
 
+concatMap f x = concat (map f x)
+concatMop f x = concat (map f x) -- Data.List.concatMap f x
 </TEST>
 -}
+
+
